--- a/backend/package.json
+++ b/backend/package.json
@@ -9,18 +9,25 @@
     "init-db": "node scripts/init-database.js"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.29.0",
+    "@solana/web3.js": "^1.87.6",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
-    "cors": "^2.8.5",
-    "@solana/web3.js": "^1.87.6",
-    "@coral-xyz/anchor": "^0.29.0",
-    "dotenv": "^16.3.1",
-    "body-parser": "^1.20.2"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["rice", "supply-chain", "blockchain", "solana", "api"],
+  "keywords": [
+    "rice",
+    "supply-chain",
+    "blockchain",
+    "solana",
+    "api"
+  ],
   "author": "DigiSaka",
   "license": "MIT"
 }
