--- a/solana-program/programs/rice-supply-chain/Cargo.toml
+++ b/solana-program/programs/rice-supply-chain/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib", "lib"]
 name = "rice_supply_chain"
 
 [features]
+idl-build = ["anchor-lang/idl-build"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
@@ -17,7 +18,5 @@ default = []
 
 [dependencies]
 anchor-lang = "0.29.0"
-anchor-spl = "0.29.0"
-spl-token = { version = "4.0", features = ["no-entrypoint"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
