--- a/render.yaml
+++ b/render.yaml
@@ -9,4 +9,8 @@ services:
         value: production
       - key: PORT
         value: 10000
+      - key: SUPABASE_URL
+        sync: false
+      - key: SUPABASE_ANON_KEY
+        sync: false
     staticPublishPath: ./frontend
