--- a/solana-program/package.json
+++ b/solana-program/package.json
@@ -9,7 +9,7 @@
     "localnet": "solana-test-validator"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.29.0",
+    "@coral-xyz/anchor": "0.31.1",
     "@solana/web3.js": "^1.87.6"
   },
   "devDependencies": {
