--- a/solana-program/Anchor.toml
+++ b/solana-program/Anchor.toml
@@ -5,11 +5,14 @@ skip-lint = false
 [programs.localnet]
 rice_supply_chain = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
 
+[programs.devnet]
+rice_supply_chain = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "Devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
