--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "DigiSaka",
   "license": "MIT",
   "dependencies": {
-    "@solana/web3.js": "^1.98.4"
+    "@solana/web3.js": "^1.98.4",
+    "cors": "^2.8.5",
+    "express": "^5.1.0"
   }
 }
