--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@coral-xyz/anchor": "^0.29.0",
     "@solana/web3.js": "^1.87.6",
     "@supabase/supabase-js": "^2.57.4",
+    "axios": "^1.13.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
