--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "@solana/web3.js": "^1.98.4",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "express": "^5.1.0"
   }
